--- a/src/SyncfusionSample.Blazor/Pages/_Host.cshtml
+++ b/src/SyncfusionSample.Blazor/Pages/_Host.cshtml
@@ -20,6 +20,8 @@
     <abp-style-bundle name="@BlazorLeptonXLiteThemeBundles.Styles.Global" />
     <!--...-->
     <link href="_content/Syncfusion.Blazor.Themes/fabric.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor.Themes/material.css" rel="stylesheet" />
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
 </head>
 <body class="abp-application-layout bg-light @rtl">
 
